--- a/module_common/src/main/res/values/themes.xml
+++ b/module_common/src/main/res/values/themes.xml
@@ -14,6 +14,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="CustomTheme" parent="@style/Theme.AppCompat.NoActionBar">
+        <!-- 添加您的自定义属性 -->
+        <item name="android:windowBackground">@color/white</item>
+    </style>
+
     <style name="MyEditText" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">@android:color/darker_gray</item>
         <item name="colorControlActivated">@color/color_15c782</item>
