--- a/module_store/src/main/res/layout/fragment_store_details_contract.xml
+++ b/module_store/src/main/res/layout/fragment_store_details_contract.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.kklv.store.ui.page.StoreDetailsContractFragment" />
+            type="com.kklv.store.ui.page.StoreDetailsContractFragment.StoreDetailsDataFragmentStates" />
 
     </data>
 
