--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.kklv.mytest.ui.page.LoginActivity"
+        android:name="com.kklv.module_login.page.LoginActivity"
         android:label="LoginFragment">
     </fragment>
 
